[gd_scene load_steps=19 format=3 uid="uid://dguvbimxk8r80"]

[ext_resource type="Material" uid="uid://c7v88ghpfbffv" path="res://assets/resources/materials/player_material.tres" id="1_a22rp"]
[ext_resource type="Script" uid="uid://dm18ngbeufinn" path="res://src/player/player.gd" id="1_kqdvt"]
[ext_resource type="AudioStream" uid="uid://4ijglykos4qn" path="res://assets/sound/score.mp3" id="2_2m7jq"]
[ext_resource type="AudioStream" uid="uid://bqf8h8h13tvwl" path="res://assets/sound/color_change.mp3" id="3_jhvac"]
[ext_resource type="Shader" uid="uid://dwax3pg33s1oa" path="res://assets/resources/outline.gdshader" id="5_tuyoq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fjrip"]
render_priority = 0
next_pass = ExtResource("1_a22rp")
shader = ExtResource("5_tuyoq")
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/outline_thickness = 0.0750000035625

[sub_resource type="BoxMesh" id="BoxMesh_qlg0r"]
material = SubResource("ShaderMaterial_fjrip")

[sub_resource type="BoxShape3D" id="BoxShape3D_qlg0r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p3nr5"]
size = Vector3(1, 0.25, 1.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dqkch"]
transparency = 1
metallic = 1.0
metallic_specular = 1.0
emission_enabled = true
emission = Color(1, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_tuyoq"]
material = SubResource("StandardMaterial3D_dqkch")
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="Animation" id="Animation_tuyoq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:mesh:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.5, 0)]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0.45, 0), Vector3(0, 0.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:mesh:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.9, 0.9, 0.9), Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:mesh:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.04, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.2, 0.8, 1.2), Vector3(1, 1, 1), Vector3(0.8, 1.2, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.025, 0.04, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0.4, 0), Vector3(0, 0.5, 0), Vector3(0, 0.6, 0)]
}

[sub_resource type="Animation" id="Animation_5f2sf"]
resource_name = "left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.2, 0.5, 0), Vector3(-0.2, 0.5, 0), Vector3(0, 0.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:mesh:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.8, 1, 1), Vector3(1.2, 1, 1), Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jiejy"]
resource_name = "right"
length = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:mesh:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.1, 0.125),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.8, 1, 1), Vector3(1.2, 1, 1), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.1, 0.125),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(-0.2, 0.5, 0), Vector3(0.2, 0.5, 0), Vector3(0, 0.5, 0)]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "slam"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:mesh:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25),
"transitions": PackedFloat32Array(1, 1, 4.28709),
"update": 0,
"values": [Vector3(0.8, 1.2, 0.8), Vector3(1.4, 0.6, 1.4), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.6, 0), Vector3(0, 0.3, 0), Vector3(0, 0.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tuyoq"]
_data = {
&"RESET": SubResource("Animation_tuyoq"),
&"idle": SubResource("Animation_fjrip"),
&"jump": SubResource("Animation_qlg0r"),
&"left": SubResource("Animation_5f2sf"),
&"right": SubResource("Animation_jiejy"),
&"slam": SubResource("Animation_smehm")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_kqdvt")
point_sfx = ExtResource("2_2m7jq")
color_change_sfx = ExtResource("3_jhvac")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
material_override = ExtResource("1_a22rp")
mesh = SubResource("BoxMesh_qlg0r")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_qlg0r")

[node name="Hitbox" type="Area3D" parent="."]

[node name="Collider" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 0.5, -0.1)
shape = SubResource("BoxShape3D_p3nr5")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
volume_db = -5.0

[node name="TrailParticles3D" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
amount = 25
speed_scale = 1.25
fixed_fps = 30
mesh = SubResource("BoxMesh_tuyoq")
emission_shape = 3
emission_box_extents = Vector3(0.45, 0.45, 0.45)
direction = Vector3(0, 0, 100)
spread = 15.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tuyoq")
}
autoplay = "idle"

[node name="SlamRaycast" type="RayCast3D" parent="."]
collide_with_areas = true
collide_with_bodies = false

[node name="StreakTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="StreakTimer" to="." method="_on_streak_timeout"]
